update post python pep8

--- a/_posts/2013-04-23-python-pep8.md
+++ b/_posts/2013-04-23-python-pep8.md
@@ -6,10 +6,10 @@ category:
 tags: [Python, PEP8]
 ---
 
-__[repost&1][http://www.python.org/dev/peps/pep-0008/]__  
-__[repost&2][http://www.blogjava.net/lincode/archive/2011/02/02/343859.html]__  
+__[repost&1](http://www.python.org/dev/peps/pep-0008/)__  
+__[repost&2](http://www.blogjava.net/lincode/archive/2011/02/02/343859.html)__  
 
-Two good reasons to break a particular rule:
+Two good reasons to break a particular rule:  
 1. When applying the rule would make the code less readable, even for someone who is used to reading code that follows the rules.
 2. To be consistent with surrounding code that also breaks it (maybe for historic reasons) -- although this is also an opportunity to clean up someone else`s mess (in true XP style).
 
