--- a/_posts/2013-07-29-chromium.md
+++ b/_posts/2013-07-29-chromium.md
@@ -6,14 +6,41 @@ category:
 tags: [chromium, browser]
 ---
 
-# [Chromium Project](http://www.chromium.org/Home)
+## [Chromium Project](http://www.chromium.org/Home)
 
-## 1.[Get Code Guide](http://dev.chromium.org/developers/how-tos/get-the-code) and [Build](http://code.google.com/p/chromium/wiki/LinuxBuildInstructions)
-## 2.[For developers](http://www.chromium.org/developers)
+#### 1.[Get Code Guide](http://dev.chromium.org/developers/how-tos/get-the-code) and [Build](http://code.google.com/p/chromium/wiki/LinuxBuildInstructions)
+#### 2.[For developers](http://www.chromium.org/developers)
 
-* 1. [All design documents](http://www.chromium.org/developers/design-documents)
-* 2. [Source Code](http://www.chromium.org/developers/how-tos/getting-around-the-chrome-source-code)
+#### * 1. [All design documents](http://www.chromium.org/developers/design-documents)
+#### * 2. [Source Code](http://www.chromium.org/developers/how-tos/getting-around-the-chrome-source-code)
 
 __partition__  
+1. about browser(extern look)
+> 1. main control (main function enterance)
+> 2. UI
+> 3. web page and tabs manager
+> 4. http and https
+
+2. about process and thread
+> 1. multi-process and IPC
+> 2. messages loop
+
+3. about render 
+> 1. webkit and page render
+> 2. js parse and v8
+> 3. v8 and webkit communications
+
+4. plugin
+> 1. thrid-party
+> 2. plugin system(ppapi, npapi)
+
+4. other
+> 1. cross-platform
+> 2. gpu render
+> 3. auto-test
+> 4. crash breackpad
+> 5. data storage for persistence
+> 6. design pattern
+> 7. browser security and sandbox
 
 {% include href.md %}
