--- a/_posts/2013-07-29-chromium.md
+++ b/_posts/2013-07-29-chromium.md
@@ -43,4 +43,38 @@ __partition__
 > 6. design pattern
 > 7. browser security and sandbox
 
+__design diagram(Top-level)__  
+![Alt text](./image/chromium.png "Chromium design diagram Top-level")
+
+__files__  
+
+1. base -- Common code shared between all sub-projects. Some tools shared more than one other top-level project.
+2. cc -- Compositor implementation.
+3. components -- Components that have the content module.
+4. content -- Multi-process sandboxed browser.
+> 1. browser.
+> 2. common.
+> 3. gpu.
+> 4. plugin.
+> 5. ppapi_plugin.
+> 6. renderer.
+> 7. utility.
+> 8. worker.
+5. ipc -- IPC system.
+6. net -- Networking libraries.
+7. sql -- Using sqlite.
+8. testing -- GTest.
+9. third_party -- The external libraries.
+10. ui -- UI graphics.
+11. v8 -- V8 Javascript library.
+12. webkit -- Webkit code.
+
+13. chrome -- The Chrome web browser.
+> 1. app -- basic level, main entrance.
+> 2. browser -- main window, UI, backend handling I/O and storage.
+> 3. common -- shared modules.
+> 4. renderer -- renderer process.
+> 5. test -- testing code.
+> 6. tools -- tools.
+
 {% include href.md %}
